[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
starknet = "0.17.0"
starknet-crypto = "0.8.1"
starknet-curve = "0.6.0"
starknet-types-core = { version = "0.2.4", features = ["secret-felt"] }
rand = "0.10.0"
crypto-bigint = "0.6.1"
num-bigint = { version = "0.4.6", features = ["rand"] }
lambdaworks-math = { version = "0.13.0", features = ["lambdaworks-serde-binary", "lambdaworks-serde-string"] }
lambdaworks-crypto = "0.13.0"
chacha20poly1305 = { version = "0.10.1", features = ["getrandom"] }
num-traits = "0.2.19"
num-integer = "0.1.46"
